--- a/hammers/yabai/config.org
+++ b/hammers/yabai/config.org
@@ -20,18 +20,41 @@
       yabai -m space 1 --label six
 
       # float system preference
-      yabai -m rule --add app="^System Settings$" sticky=on layer=above manage=off
       yabai -m rule --add app="^Karabiner-Elements$" sticky=on layer=above manage=off
       yabai -m rule --add app="^Karabiner-EventViewer$" sticky=on layer=above manage=off
-      yabai -m rule --add app="^Finder$" sticky=on layer=above manage=off
+      yabai -m rule --add label="Finder" app="^Finder$" title="(Co(py|nnect)|Move|Info|Pref)" manage=off
+
       yabai -m rule --add app="^Alfred Preferences$" sticky=on layer=above manage=off
       yabai -m rule --add app="^Disk Utility$" sticky=on layer=above manage=off
+      yabai -m rule --add label="Activity Monitor" app="^Activity Monitor$" manage=off
+
+      yabai -m rule --add title='^Archive Utility$' manage=off
+
       yabai -m rule --add app="^NetEaseMusic$" sticky=on layer=above manage=off
       yabai -m rule --add app="^Nutstore$" layer=above manage=off
       yabai -m rule --add app="^Emacs$" layer=above manage=off
 
       yabai -m rule --add app="^iTerm2$" manage=off
+
+      yabai -m rule --add app="^Calendar$" manage=off
+      yabai -m rule --add app="^Music$" manage=off
+      yabai -m rule --add label="Calculator" app="^Calculator$" manage=off
       yabai -m rule --add app="^console$" manage=off
+
+
+      yabai -m rule --add app="^1Password 7$" manage=off
+      yabai -m rule --add app="^Microsoft Remote Desktop$" manage=off
+      yabai -m rule --add app="^The Unarchiver$" manage=off
+
+
+      yabai -m rule --add app="^System Settings$" sticky=on layer=above manage=off
+      yabai -m rule --add label="System Preferences" app="^System Preferences$" title=".*" manage=off
+      yabai -m rule --add app="^System Information$" manage=off
+      yabai -m rule --add app="^System Preferences$" manage=off
+      yabai -m rule --add title='Preferences$' manage=off
+      yabai -m rule --add label="About This Mac" app="System Information" title="About This Mac" manage=off
+      yabai -m rule --add title='Settings$' manage=off
+
 
       yabai -m config window_placement second_child
       yabai -m config window_topmost off
@@ -45,6 +68,10 @@
       yabai -m config auto_balance off
       yabai -m config split_ratio 0.50
 
+
+      yabai -m config mouse_follows_focus          off
+      # focus_follows_mouse: off, autoraise, autofocus
+      yabai -m config focus_follows_mouse          off
       yabai -m config mouse_modifier ctrl
       yabai -m config mouse_action2 resize
       yabai -m config mouse_action1 move
