refactor: update keymapping

--- a/hammers/karabiner/mapping.org
+++ b/hammers/karabiner/mapping.org
@@ -2,11 +2,11 @@
     1. ctrl-shift-f12 to 1password
     2. 
 *** karabiner 配置
-**** cmd-\ to Ctrl-Shift-F12 to enable 1password except emacs
+**** Command-\ to Hyper-P to enable 1Password except emacs
      #+NAME: cmd_backslash
      #+BEGIN_SRC json :eval never :exports code :noweb yes
        {
-           "description": "Change Cmd-backslash to Ctrl-Alt-F12 to fill with 1password",
+           "description": "Change Command-\\ to Hyper-p to fill with 1Password",
            "manipulators": [
                {
                "type": "basic",
@@ -17,16 +17,18 @@
                            "any"
                        ],
                        "mandatory": [
-                           "left_gui"
+                           "left_command"
                        ]
                    }
                },
                "to": [
                    {
-                   "key_code": "f12",
+                   "key_code": "p",
                    "modifiers": [
                        "left_control",
-                       "left_shift"
+                       "left_alt",
+                       "left_shift",
+                       "left_command"
                    ]
                }
                ],
@@ -42,11 +44,11 @@
            ]
        }
      #+END_SRC
-**** cmd-space mapping Ctrl-Alt-Shift-Cmd-S to switch input method except emacs
+**** Command-Space mapping Hyper-I to switch input method except emacs
      #+NAME: cmd_space
      #+BEGIN_SRC json :eval never :exports code :noweb yes
        {
-           "description": "Change cmd-space to Ctrl-Alt-Shift-Gui to change input method, except emacs",
+           "description": "Change Command-Space to Hyper-I to change input method, except Emacs",
            "manipulators": [
                {
                "type": "basic",
@@ -57,18 +59,18 @@
                            "any"
                        ],
                        "mandatory": [
-                           "left_gui"
+                           "left_command"
                        ]
                    }
                },
                "to": [
                    {
-                   "key_code": "s",
+                   "key_code": "i",
                    "modifiers": [
                        "left_control",
                        "left_alt",
                        "left_shift",
-                       "left_gui"
+                       "left_command"
                    ]
                }
                ],
@@ -85,11 +87,11 @@
        }
      #+END_SRC
 
-**** cmd-shift-a mapping to Alt-Shift-Cmd-1 to capture by snipaste except emacs
+**** Command-Shift-a mapping to Hyper-4 to capture by Snipaste except Emacs(keyboard default ScreenShot is Command-Shift-4)
      #+NAME: cmd_shift_a
      #+BEGIN_SRC json :eval never :exports code :noweb yes
        {
-           "description": "Change Ctrl-Shift-A to capture by snipaste",
+           "description": "Change Ctrl-Shift-A to Hyper-4 capture by snipaste, except Emacs",
            "manipulators": [
                {
                "type": "basic",
@@ -97,18 +99,19 @@
                    "key_code": "a",
                    "modifiers": {
                        "mandatory": [
-                           "left_gui",
+                           "left_command",
                            "left_control"
                        ]
                    }
                },
                "to": [
                    {
-                   "key_code": "1",
+                   "key_code": "4",
                    "modifiers": [
+                       "left_control",
                        "left_alt",
                        "left_shift",
-                       "left_gui"
+                       "left_command"
                    ]
                }
                ],
@@ -125,41 +128,69 @@
        }
      #+END_SRC
 
-**** tab to hyper when held down
-     #+NAME: tab_to_hyper
+**** CapsLock to Ctrl/Escape
+     #+NAME: capslock_to_ctrl/escape
      #+BEGIN_SRC json :eval never :exports code :noweb yes
        {
-           "description": "Map Tab to Hyper when held",
+           "description": "CapsLock to Ctrl/Escape",
            "manipulators": [
                {
                "type": "basic",
                "from": {
-                   "key_code": "tab",
+                   "key_code": "caps_lock",
                    "modifiers": {
                        "optional": [
                            "any"
                        ]
                    }
                },
-               "to_if_alone": [
+               "to": [
                    {
-                   "key_code": "tab"
+                   "key_code": "left_control",
+                   "lazy": true
                }
                ],
-               "to_if_held_down": [
+               "to_if_alone": [
                    {
-                   "key_code": "left_shift",
-                   "modifiers": [
-                       "left_command",
-                       "left_control",
-                       "left_option"
-                   ]
+                   "key_code": "escape"
                }
                ]
            }
            ]
        }
      #+END_SRC
+
+**** Right Command Key → Hyper Key (⌃⌥⇧⌘)
+     #+NAME: right_command_to_hyper
+     #+BEGIN_SRC json :eval never :exports code :noweb yes
+       {
+         "description": "Right Command Key → Hyper Key (⌃⌥⇧⌘)",
+         "manipulators": [
+           {
+             "from": {
+               "key_code": "right_command",
+               "modifiers": {
+                 "optional": [
+                   "any"
+                 ]
+               }
+             },
+             "to": [
+               {
+                 "key_code": "left_shift",
+                 "modifiers": [
+                   "left_command",
+                   "left_control",
+                   "left_option"
+                 ]
+               }
+             ],
+             "type": "basic"
+           }
+         ]
+       }
+     #+END_SRC
+     
 
 **** 将所有配置合并到配置文件中
      #+BEGIN_SRC json :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/karabiner/assets/complex_modifications/macos.json") :noweb yes
@@ -169,7 +200,8 @@
                    <<cmd_backslash>>,
                    <<cmd_space>>,
                    <<cmd_shift_a>>,
-                   <<tab_to_hyper>>
+                   <<capslock_to_ctrl/escape>>,
+                   <<right_command_to_hyper>>
            ]
        }
      #+END_SRC
