--- a/hammers/karabiner/mapping.org
+++ b/hammers/karabiner/mapping.org
@@ -1,7 +1,8 @@
 *** 系统快捷键配置
-    1. ctrl-shift-f12 to 1password
-    2. 
-*** karabiner 配置
+    1. Ctrl-Shift-Option-Command P to 1password
+    2. Ctrl-Shift-Option-Command I 绑定到输入法切换
+    3. Ctrl-Shift-Option-Command 4 绑定到 snippaste 进行截屏
+*** karabiner modifications 配置
 **** Command-\ to Hyper-P to enable 1Password except emacs
      #+NAME: cmd_backslash
      #+BEGIN_SRC json :eval never :exports code :noweb yes
@@ -192,16 +193,742 @@
      #+END_SRC
      
 
-**** 将所有配置合并到配置文件中
-     #+BEGIN_SRC json :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/karabiner/assets/complex_modifications/macos.json") :noweb yes
-       {
-           "title": "Neo's Personal Configurations",
-           "rules": [
+*** karabiner 系统配置（将所有配置合并到配置文件中）
+    #+BEGIN_SRC json :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/karabiner/karabiner.json") :noweb yes
+      {
+        "global": {
+          "check_for_updates_on_startup": true,
+          "show_in_menu_bar": true,
+          "show_profile_name_in_menu_bar": false,
+          "unsafe_ui": false
+        },
+        "profiles": [
+          {
+            "complex_modifications": {
+              "parameters": {
+                "basic.simultaneous_threshold_milliseconds": 50,
+                "basic.to_delayed_action_delay_milliseconds": 500,
+                "basic.to_if_alone_timeout_milliseconds": 1000,
+                "basic.to_if_held_down_threshold_milliseconds": 500,
+                "mouse_motion_to_scroll.speed": 100
+              },
+              "rules": [
                    <<cmd_backslash>>,
                    <<cmd_space>>,
                    <<cmd_shift_a>>,
                    <<capslock_to_ctrl/escape>>,
                    <<right_command_to_hyper>>
-           ]
-       }
-     #+END_SRC
+              ]
+            },
+            "devices": [
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": true,
+                  "is_pointing_device": false,
+                  "product_id": 34050,
+                  "vendor_id": 2652
+                },
+                "ignore": false,
+                "manipulate_caps_lock_led": true,
+                "simple_modifications": [
+                  {
+                    "from": {
+                      "key_code": "left_command"
+                    },
+                    "to": [
+                      {
+                        "key_code": "left_option"
+                      }
+                    ]
+                  },
+                  {
+                    "from": {
+                      "key_code": "left_option"
+                    },
+                    "to": [
+                      {
+                        "key_code": "left_gui"
+                      }
+                    ]
+                  }
+                ],
+                "treat_as_built_in_keyboard": false
+              },
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": true,
+                  "is_pointing_device": false,
+                  "product_id": 632,
+                  "vendor_id": 1452
+                },
+                "ignore": false,
+                "manipulate_caps_lock_led": true,
+                "simple_modifications": [],
+                "treat_as_built_in_keyboard": false
+              },
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": true,
+                  "is_pointing_device": false,
+                  "product_id": 34304,
+                  "vendor_id": 1452
+                },
+                "ignore": false,
+                "manipulate_caps_lock_led": true,
+                "simple_modifications": [],
+                "treat_as_built_in_keyboard": false
+              },
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": false,
+                  "is_pointing_device": true,
+                  "product_id": 632,
+                  "vendor_id": 1452
+                },
+                "ignore": true,
+                "manipulate_caps_lock_led": false,
+                "simple_modifications": [],
+                "treat_as_built_in_keyboard": false
+              },
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": true,
+                  "is_pointing_device": false,
+                  "product_id": 6168,
+                  "vendor_id": 1241
+                },
+                "ignore": false,
+                "manipulate_caps_lock_led": true,
+                "simple_modifications": [],
+                "treat_as_built_in_keyboard": false
+              },
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": true,
+                  "is_pointing_device": false,
+                  "product_id": 50475,
+                  "vendor_id": 1133
+                },
+                "ignore": false,
+                "manipulate_caps_lock_led": true,
+                "simple_modifications": [],
+                "treat_as_built_in_keyboard": false
+              },
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": false,
+                  "is_pointing_device": true,
+                  "product_id": 50475,
+                  "vendor_id": 1133
+                },
+                "ignore": true,
+                "manipulate_caps_lock_led": false,
+                "simple_modifications": [],
+                "treat_as_built_in_keyboard": false
+              },
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": true,
+                  "is_pointing_device": false,
+                  "product_id": 591,
+                  "vendor_id": 1452
+                },
+                "ignore": false,
+                "manipulate_caps_lock_led": true,
+                "simple_modifications": [],
+                "treat_as_built_in_keyboard": false
+              },
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": true,
+                  "is_pointing_device": true,
+                  "product_id": 45080,
+                  "vendor_id": 1133
+                },
+                "ignore": true,
+                "manipulate_caps_lock_led": true,
+                "simple_modifications": [],
+                "treat_as_built_in_keyboard": false
+              },
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": false,
+                  "is_pointing_device": true,
+                  "product_id": 12314,
+                  "vendor_id": 16700
+                },
+                "ignore": true,
+                "manipulate_caps_lock_led": false,
+                "simple_modifications": [],
+                "treat_as_built_in_keyboard": false
+              },
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": true,
+                  "is_pointing_device": true,
+                  "product_id": 591,
+                  "vendor_id": 1452
+                },
+                "ignore": true,
+                "manipulate_caps_lock_led": true,
+                "simple_modifications": [],
+                "treat_as_built_in_keyboard": false
+              }
+            ],
+            "fn_function_keys": [
+              {
+                "from": {
+                  "key_code": "f1"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "display_brightness_decrement"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f2"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "display_brightness_increment"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f3"
+                },
+                "to": [
+                  {
+                    "apple_vendor_keyboard_key_code": "mission_control"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f4"
+                },
+                "to": [
+                  {
+                    "apple_vendor_keyboard_key_code": "spotlight"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f5"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "dictation"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f6"
+                },
+                "to": [
+                  {
+                    "key_code": "f6"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f7"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "rewind"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f8"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "play_or_pause"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f9"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "fast_forward"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f10"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "mute"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f11"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "volume_decrement"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f12"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "volume_increment"
+                  }
+                ]
+              }
+            ],
+            "name": "Default profile",
+            "parameters": {
+              "delay_milliseconds_before_open_device": 1000
+            },
+            "selected": false,
+            "simple_modifications": [],
+            "virtual_hid_keyboard": {
+              "country_code": 0,
+              "indicate_sticky_modifier_keys_state": true,
+              "mouse_key_xy_scale": 100
+            }
+          },
+          {
+            "complex_modifications": {
+              "parameters": {
+                "basic.simultaneous_threshold_milliseconds": 50,
+                "basic.to_delayed_action_delay_milliseconds": 500,
+                "basic.to_if_alone_timeout_milliseconds": 1000,
+                "basic.to_if_held_down_threshold_milliseconds": 500,
+                "mouse_motion_to_scroll.speed": 100
+              },
+              "rules": [
+                {
+                  "description": "Change Command-\\ to Hyper-p to fill with 1Password",
+                  "manipulators": [
+                    {
+                      "conditions": [
+                        {
+                          "bundle_identifiers": [
+                            "org.gnu.Emacs"
+                          ],
+                          "type": "frontmost_application_unless"
+                        }
+                      ],
+                      "from": {
+                        "key_code": "backslash",
+                        "modifiers": {
+                          "mandatory": [
+                            "left_command"
+                          ],
+                          "optional": [
+                            "any"
+                          ]
+                        }
+                      },
+                      "to": [
+                        {
+                          "key_code": "p",
+                          "modifiers": [
+                            "left_control",
+                            "left_alt",
+                            "left_shift",
+                            "left_command"
+                          ]
+                        }
+                      ],
+                      "type": "basic"
+                    }
+                  ]
+                },
+                {
+                  "description": "Change Command-Space to Hyper-I to change input method, except Emacs",
+                  "manipulators": [
+                    {
+                      "conditions": [
+                        {
+                          "bundle_identifiers": [
+                            "org.gnu.Emacs"
+                          ],
+                          "type": "frontmost_application_unless"
+                        }
+                      ],
+                      "from": {
+                        "key_code": "spacebar",
+                        "modifiers": {
+                          "mandatory": [
+                            "left_command"
+                          ],
+                          "optional": [
+                            "any"
+                          ]
+                        }
+                      },
+                      "to": [
+                        {
+                          "key_code": "i",
+                          "modifiers": [
+                            "left_control",
+                            "left_alt",
+                            "left_shift",
+                            "left_command"
+                          ]
+                        }
+                      ],
+                      "type": "basic"
+                    }
+                  ]
+                },
+                {
+                  "description": "Change Ctrl-Shift-A to Hyper-4 capture by snipaste, except Emacs",
+                  "manipulators": [
+                    {
+                      "conditions": [
+                        {
+                          "bundle_identifiers": [
+                            "org.gnu.Emacs"
+                          ],
+                          "type": "frontmost_application_unless"
+                        }
+                      ],
+                      "from": {
+                        "key_code": "a",
+                        "modifiers": {
+                          "mandatory": [
+                            "left_command",
+                            "left_control"
+                          ]
+                        }
+                      },
+                      "to": [
+                        {
+                          "key_code": "4",
+                          "modifiers": [
+                            "left_control",
+                            "left_alt",
+                            "left_shift",
+                            "left_command"
+                          ]
+                        }
+                      ],
+                      "type": "basic"
+                    }
+                  ]
+                },
+                {
+                  "description": "CapsLock to Ctrl/Escape",
+                  "manipulators": [
+                    {
+                      "from": {
+                        "key_code": "caps_lock",
+                        "modifiers": {
+                          "optional": [
+                            "any"
+                          ]
+                        }
+                      },
+                      "to": [
+                        {
+                          "key_code": "left_control",
+                          "lazy": true
+                        }
+                      ],
+                      "to_if_alone": [
+                        {
+                          "key_code": "escape"
+                        }
+                      ],
+                      "type": "basic"
+                    }
+                  ]
+                },
+                {
+                  "description": "Right Command Key → Hyper Key (⌃⌥⇧⌘)",
+                  "manipulators": [
+                    {
+                      "from": {
+                        "key_code": "right_command",
+                        "modifiers": {
+                          "optional": [
+                            "any"
+                          ]
+                        }
+                      },
+                      "to": [
+                        {
+                          "key_code": "left_shift",
+                          "modifiers": [
+                            "left_command",
+                            "left_control",
+                            "left_option"
+                          ]
+                        }
+                      ],
+                      "type": "basic"
+                    }
+                  ]
+                }
+              ]
+            },
+            "devices": [
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": true,
+                  "is_pointing_device": false,
+                  "product_id": 632,
+                  "vendor_id": 1452
+                },
+                "ignore": false,
+                "manipulate_caps_lock_led": true,
+                "simple_modifications": [],
+                "treat_as_built_in_keyboard": false
+              },
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": false,
+                  "is_pointing_device": true,
+                  "product_id": 632,
+                  "vendor_id": 1452
+                },
+                "ignore": true,
+                "manipulate_caps_lock_led": false,
+                "simple_modifications": [],
+                "treat_as_built_in_keyboard": false
+              },
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": false,
+                  "is_pointing_device": true,
+                  "product_id": 12314,
+                  "vendor_id": 16700
+                },
+                "ignore": true,
+                "manipulate_caps_lock_led": false,
+                "simple_modifications": [],
+                "treat_as_built_in_keyboard": false
+              },
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": true,
+                  "is_pointing_device": true,
+                  "product_id": 591,
+                  "vendor_id": 1452
+                },
+                "ignore": true,
+                "manipulate_caps_lock_led": true,
+                "simple_modifications": [],
+                "treat_as_built_in_keyboard": false
+              },
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": true,
+                  "is_pointing_device": false,
+                  "product_id": 591,
+                  "vendor_id": 1452
+                },
+                "ignore": false,
+                "manipulate_caps_lock_led": true,
+                "simple_modifications": [],
+                "treat_as_built_in_keyboard": false
+              },
+              {
+                "disable_built_in_keyboard_if_exists": false,
+                "fn_function_keys": [],
+                "identifiers": {
+                  "is_keyboard": true,
+                  "is_pointing_device": false,
+                  "product_id": 34304,
+                  "vendor_id": 1452
+                },
+                "ignore": false,
+                "manipulate_caps_lock_led": true,
+                "simple_modifications": [],
+                "treat_as_built_in_keyboard": false
+              }
+            ],
+            "fn_function_keys": [
+              {
+                "from": {
+                  "key_code": "f1"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "display_brightness_decrement"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f2"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "display_brightness_increment"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f3"
+                },
+                "to": [
+                  {
+                    "apple_vendor_keyboard_key_code": "mission_control"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f4"
+                },
+                "to": [
+                  {
+                    "apple_vendor_keyboard_key_code": "spotlight"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f5"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "dictation"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f6"
+                },
+                "to": [
+                  {
+                    "key_code": "f6"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f7"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "rewind"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f8"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "play_or_pause"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f9"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "fast_forward"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f10"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "mute"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f11"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "volume_decrement"
+                  }
+                ]
+              },
+              {
+                "from": {
+                  "key_code": "f12"
+                },
+                "to": [
+                  {
+                    "consumer_key_code": "volume_increment"
+                  }
+                ]
+              }
+            ],
+            "name": "macos",
+            "parameters": {
+              "delay_milliseconds_before_open_device": 1000
+            },
+            "selected": true,
+            "simple_modifications": [],
+            "virtual_hid_keyboard": {
+              "country_code": 0,
+              "indicate_sticky_modifier_keys_state": true,
+              "mouse_key_xy_scale": 100
+            }
+          }
+        ]
+      }
+    #+END_SRC
+
