--- a/hammers/git/config.org
+++ b/hammers/git/config.org
@@ -98,6 +98,9 @@
           line-numbers-right-style = cyan
           line-numbers-minus-style = 124
           line-numbers-plus-style = 28
+      [oh-my-zsh]
+          hide-status = 1
+          hide-dirty = 1
     #+END_SRC
 
 *** git commit template
