--- a/hammers/skhd/config.org
+++ b/hammers/skhd/config.org
@@ -77,12 +77,17 @@
      #
      #                                   an EOL character signifies the end of the bind.
 
+     # make floating window top half
+     ctrl + alt - up:  yabai -m window --grid 2:1:0:0:1:1
+     # make floating window bottom half
+     ctrl + alt - down:  yabai -m window --grid 2:1:0:1:1:1
+     # make floating window left half of screen
+     ctrl + alt - left:  yabai -m window --grid 1:2:0:0:1:1
+     # make floating window right half of screen
+     ctrl + alt - right: yabai -m window --grid 1:2:1:0:1:1
+
      # make floating window fill screen
      ctrl + alt + cmd - up:  yabai -m window --grid 1:1:0:0:1:1
-     # make floating window left half of screen
-     ctrl + alt + cmd - left:  yabai -m window --grid 1:2:0:0:1:1
-     # make floating window right half of screen
-     ctrl + alt + cmd - right: yabai -m window --grid 1:2:1:0:1:1
      # make floating window center
      ctrl + alt + cmd - c: yabai -m window --grid 4:4:1:1:2:2
      # make floating window to display 1
